# scaleway-operator

./: .gitignore  .markdownlint-cli2.yaml  .release-please-manifest.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  STRATEGY.md  prek.toml  release-please-config.json
.claude/: settings.json
.claude/hooks/: agent-identity.sh  gh-app-token.sh
.github/workflows/: auto-add-to-project.yml  parse-cost-comment.yml  release.yml  update-status-on-pr.yml
charts/scaleway-operator/: CHANGELOG.md  Chart.yaml  README.md  values.schema.json  values.yaml
charts/scaleway-operator-crds/: CHANGELOG.md  Chart.yaml  README.md
charts/scaleway-operator-crds/templates/: NOTES.txt  crd-instance.yaml  crd-loadbalancer.yaml  crd-namespacerole.yaml  crd-project.yaml
charts/scaleway-operator/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  (+7 more)
docs/plans/: 2026-05-03-001-feat-generate-k8s-manifests-plan.md  2026-05-03-001-feat-unit-test-coverage-plan.md  2026-05-03-002-feat-contributing-dev-setup-plan.md  2026-05-03-003-refactor-kube-3-migration-plan.md
examples/: crd_gen.rs
k8s/: crd-instance.yaml  crd-loadbalancer.yaml  crd-namespacerole.yaml  crd-project.yaml  deployment.yaml  examples-namespacerole.yaml  examples.yaml  rbac-helm-deploy.yaml  test-fixtures.yaml
scripts/: setup-agent-identity.sh  test-integration-kind.sh
src/: context.rs  error.rs  lib.rs  main.rs  metrics.rs  reconcilers.rs  resources.rs  scaleway.rs  server.rs
tests/: axum_server.rs  integration.rs
(+16 files in other folders)
