[package]
name = "scaleway-operator"
version = "0.1.8"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
kube = { version = "3.1.0", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.27.1", features = ["v1_35"] }
schemars = { version = "1", features = ["chrono04"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
prometheus = "0.14"
axum = "0.8"

[dev-dependencies]
mockito = "1.3"
serde_yaml = "0.9"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
